<resources>
    <string name="app_name">Craft Beer Ireland</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Craft Beer Ireland</string>
    <string name="nav_header_subtitle">www.craftBeerIreland.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="appDesc">Craft Beer Ireland provides the user with a quick and easy way to manage a list of Craft Beers and your favourite Craft Bars.</string>
    <string name="appMoreInfo">For more information about Craft Beer Ireland or to provide feedback please visit our website.</string>
    <string name="appAbout">About Craft Beer Ireland</string>
    <string name="appWebsite">https://github.com/kevnokeeffe/CraftBeerApp</string>
    <string name="developer">Developed by Kevin O Keeffe</string>

    <string name="searchBeerLbl">Search Beer\'s</string>
    <string name="favouritesBeerLbl">Favourite Beer\'s</string>
    <string name="addABeerLbl">Beer Check In</string>
    <string name="addBeerBtnLbl">Add Beer</string>
    <string name="saveBeerBtn">Save Beer</string>
    <string name="recentlyViewedLbl">Recently Added Craft Beer\'s</string>
    <string name="beerNameLbl">Name :</string>
    <string name="craftBarLbl">Bar :</string>
    <string name="beerPriceLbl">Price :</string>
    <string name="beerRatingLbl">Star Rating</string>
    <string name="beerDetailsLbl">Full Beer Details</string>
    <string name="informationLbl">Information</string>
    <string name="emptyMessageLbl">You have no Beer\'s added, go have a beer!</string>
    <string name="placeHolder">Placeholder</string>
    <string name="deleteCoffeesLbl">Delete</string>
    <string name="editBeerLbl">Edit Beer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="beerTypes">
        <item>All Types</item>
        <item>Favourites</item>
        <item>\> 3\* Rating</item>
    </string-array>


    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login In!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

</resources>
