<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EditFragment"
    >



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <ImageView
                android:id="@+id/editFavourite"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="45dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="25dp"
                android:onClick="toggle"
                android:padding="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/tumbs_off"
                tools:layout_editor_absoluteX="327dp" />

            <TextView
                android:id="@+id/editPriceTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editCraftBarTV"


                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="28dp"
                android:text="@string/beerPriceLbl"
                android:textAlignment="textEnd"
                android:textColor="@color/colorFontBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/editCraftBarTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editNameTV"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"


                android:layout_marginTop="28dp"
                android:layout_marginEnd="17dp"
                android:text="@string/craftBarLbl"
                android:textAlignment="textEnd"
                android:textColor="@color/colorFontBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/editNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="138dp"


                android:text="@string/beerNameLbl"
                android:textAlignment="textEnd"
                android:textColor="@color/colorFontBlack"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editNameET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="22dp"
                android:layout_marginTop="127dp"
                android:layout_marginEnd="60dp"
                android:layout_toEndOf="@+id/editNameTV"
                android:ems="10"
                android:hint="Beer Name"
                android:inputType="textPersonName"
                app:layout_constraintBaseline_toBaselineOf="@+id/editNameTV"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/editPriceET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="28dp"
                android:layout_marginTop="233dp"
                android:layout_toEndOf="@+id/editPriceTV"
                android:ems="10"
                android:hint="Price"
                android:inputType="numberDecimal"
                app:layout_constraintBaseline_toBaselineOf="@+id/editPriceTV"
                app:layout_constraintStart_toStartOf="@+id/editBarET" />

            <EditText
                android:id="@+id/editBarET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="26dp"
                android:layout_marginTop="181dp"
                android:layout_toEndOf="@+id/editCraftBarTV"
                android:ems="10"
                android:hint="Bar"
                android:inputType="textPersonName"
                app:layout_constraintBaseline_toBaselineOf="@+id/editCraftBarTV"
                app:layout_constraintStart_toStartOf="@+id/editNameET" />

            <fragment
                android:id="@+id/addmap"
                android:name="ie.craftbeerireland.fragments.MapsFragment"
                android:layout_width="match_parent"
                android:layout_height="142dp"
                android:layout_below="@+id/editRatingBar"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.627"
                tools:layout="@layout/activity_map" />

            <RatingBar
                android:id="@+id/editRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="35dp"
                android:layout_marginTop="290dp"
                android:rating="3.5"
                android:stepSize="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editPriceET" />

            <android.support.v7.widget.CardView
                android:id="@+id/editBeerBtn"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@+id/editRatingBar"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="16dp"

                android:layout_marginRight="60dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editRatingBar">

                <ImageButton
                    android:id="@+id/addBeer"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignStart="@+id/editBeerBtn"
                    android:background="@drawable/save_button"
                    android:onClick="saveCraftBeer" />
            </android.support.v7.widget.CardView>
        </RelativeLayout>





</android.support.constraint.ConstraintLayout>